--- a/pom.xml
+++ b/pom.xml
@@ -6,42 +6,52 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<properties>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<spring.version>3.1.2.RELEASE</spring.version>
+		<jboss.version>2.2.20.GA</jboss.version>
+		<junit.version>4.11</junit.version>
+
+		<mvnCompiler.version>3.0</mvnCompiler.version>
+		<mvnSource.version>1.7</mvnSource.version>
+		<mvnTarget.version>1.7</mvnTarget.version>
+
 	</properties>
+
 	<dependencies>
 
 		<!-- JBoss Common classes -->
 		<dependency>
 			<groupId>org.jboss</groupId>
 			<artifactId>jboss-common-core</artifactId>
-			<version>2.2.20.GA</version>
+			<version>${jboss.version}</version>
 		</dependency>
 
 		<!-- Spring Framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>3.1.2.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<!-- Spring Web Framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>3.1.2.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<!-- Spring mvc Web Framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>3.1.2.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<!-- JUnit 4.11 -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 		</dependency>
 
 	</dependencies>
@@ -50,10 +60,10 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>${mvnCompiler.version}</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${mvnSource.version}</source>
+					<target>${mvnTarget.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
