--- a/pom.xml
+++ b/pom.xml
@@ -23,68 +23,74 @@
 
 	<dependencies>
 
-		<!-- JBoss Common classes -->
+					<!-- Jackson-mapper-lgpl -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-core-asl</artifactId>
+			<artifactId>jackson-mapper-lgpl</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+	<!-- Jackson-core-lgpl -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-lgpl</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 
 
-
 		<!-- JBoss Common classes -->
 		<dependency>
-			<groupId>org.jboss</groupId>
-			<artifactId>jboss-common-core</artifactId>
-			<version>${jboss.version}</version>
+		<groupId>org.jboss</groupId>
+		<artifactId>jboss-common-core</artifactId>
+		<version>${jboss.version}</version>
 		</dependency>
 
 		<!-- Spring Framework -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>${spring.version}</version>
 		</dependency>
 		<!-- Spring Web Framework -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-web</artifactId>
+		<version>${spring.version}</version>
 		</dependency>
 		<!-- Spring mvc Web Framework -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>${spring.version}</version>
 		</dependency>
 
 		<!-- JUnit 4.11 -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>${junit.version}</version>
 		</dependency>
 
-	</dependencies>
-	<build>
+		</dependencies>
+		<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${mvnCompiler.version}</version>
-				<configuration>
-					<source>${mvnSource.version}</source>
-					<target>${mvnTarget.version}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<warSourceDirectory>WebContent</warSourceDirectory>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin>
+		<plugin>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>${mvnCompiler.version}</version>
+		<configuration>
+		<source>${mvnSource.version}</source>
+		<target>${mvnTarget.version}</target>
+		</configuration>
+		</plugin>
+		<plugin>
+		<artifactId>maven-war-plugin</artifactId>
+		<version>2.2</version>
+		<configuration>
+		<warSourceDirectory>WebContent</warSourceDirectory>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+		</configuration>
+		</plugin>
 		</plugins>
-	</build>
-</project>
+		</build>
+		</project>
