--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
 	</properties>
 
 	<dependencies>
+
+					<!-- cglib reopsitory -->
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
+
+
 					<!--spring-data-mongoDB -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
