--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,6 +13,19 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
+	<security-constraint>
+    <display-name>UnLock All Methods</display-name>
+    <web-resource-collection>
+       <web-resource-name>All Resources</web-resource-name>
+       <description>Allow all web resources.</description>
+       <url-pattern>/</url-pattern>
+       <http-method>GET</http-method>
+       <http-method>PUT</http-method>
+       <http-method>POST</http-method>
+       <http-method>DELETE</http-method>
+    </web-resource-collection>
+</security-constraint>
+	
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
