--- a/pom.xml
+++ b/pom.xml
@@ -50,17 +50,17 @@
 		</dependency>
 
 
-					<!-- Jackson-mapper-lgpl -->
+					<!-- Jackson-mapper-asl -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-lgpl</artifactId>
+			<artifactId>jackson-mapper-asl</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 
-	<!-- Jackson-core-lgpl -->
+	<!-- Jackson-core-asl -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-core-lgpl</artifactId>
+			<artifactId>jackson-core-asl</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 
